--- a/checkout.html
+++ b/checkout.html
@@ -43,8 +43,7 @@
       <div class="page-title">Review your order</div>
 
       <div class="checkout-grid">
-        <div class="order-summary 
-        js-order-summary">
+        <div class="order-summary js-order-summary">
 
         <div class="payment-summary">
           <div class="payment-summary-title">
@@ -82,6 +81,7 @@
         </div>
       </div>
     </div>
+    <script src="https://unpkg.com/supersimpledev@1.0.1/hello.js"></script>
 
     <script src="https://unpkg.com/dayjs@1.11.10/dayjs.min.js"></script>
 
